--- a/.github/workflows/aws-test.yml
+++ b/.github/workflows/aws-test.yml
@@ -45,7 +45,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ AWS_DEFAULT_REGION }}
+          aws-region: ${{ vars.AWS_DEFAULT_REGION }}
           http-proxy: http://ec2.poc.aristotle.ucsb.edu:443
       - name: Stop EC2 runner
         uses: machulav/ec2-github-runner@v2
