--- a/.github/workflows/aws-test.yml
+++ b/.github/workflows/aws-test.yml
@@ -3,6 +3,8 @@ on: push
 jobs:
   start-runner:
     name: Start self-hosted EC2 runner
+    env: 
+      AWS_ENDPOINT_URL: "http://ec2.poc.aristotle.ucsb.edu:443"
     runs-on: ubuntu-latest
     outputs:
       label: ${{ steps.start-ec2-runner.outputs.label }}
@@ -27,6 +29,8 @@ jobs:
           security-group-id: sg-d74861a09e5a7000f
   do-the-job:
     name: Do the job on the runner
+    env: 
+      AWS_ENDPOINT_URL: "http://ec2.poc.aristotle.ucsb.edu:443"
     needs: start-runner # required to start the main job when the runner is ready
     runs-on: ${{ needs.start-runner.outputs.label }} # run the job on the newly created runner
     steps:
@@ -34,6 +38,8 @@ jobs:
         run: echo 'Hello World!'
   stop-runner:
     name: Stop self-hosted EC2 runner
+    env: 
+      AWS_ENDPOINT_URL: "http://ec2.poc.aristotle.ucsb.edu:443"
     needs:
       - start-runner # required to get output from the start-runner job
       - do-the-job # required to wait when the main job is done
