--- a/.github/workflows/aws-test.yml
+++ b/.github/workflows/aws-test.yml
@@ -14,6 +14,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ vars.AWS_DEFAULT_REGION }}
+          audience: ec2.poc.aristotle.ucsb.edu
       - name: Start EC2 runner
         id: start-ec2-runner
         uses: machulav/ec2-github-runner@v2
@@ -45,6 +46,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ vars.AWS_DEFAULT_REGION }}
+          audience: ec2.poc.aristotle.ucsb.edu
       - name: Stop EC2 runner
         uses: machulav/ec2-github-runner@v2
         with:
