--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - name: Check out the repository to the runner
-        uses: actions/checkout@v4  
+        uses: actions/checkout@v4
+      - name: Make executable
+        run: chmod 750 stage1.sh
       - name: Run a script
         run: ./stage1.sh
