--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -6,8 +6,9 @@ jobs:
   run-stage-1:
     runs-on: ubuntu-latest
     steps: 
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Run script file
         run: |
-         ./stage1.sh
+         chmod +x stage1.sh
+         stage1.sh
         shell: bash
