--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -9,5 +9,5 @@ jobs:
       - uses: actions/checkout@v4
       - name: Run script file
         run: |
-         ./stage1.sh
+         ./cspot-cicd/stage1.sh
         shell: bash
