--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -8,5 +8,5 @@ jobs:
     steps: 
       - uses: actions/checkout@v4
       - name: Run script file
-        run: echo ls
+        run: ls
         shell: bash
