--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -11,8 +11,7 @@ jobs:
         run: ls
       - name: pwd
         run: pwd
+      - name: Set executable permissions
+        run: chmod +x stage1.sh
       - name: Run script file
-        run: |
-          ./stage1.sh
-        env:
-          filename: "./stage1.sh"
+        run: stage1.sh
