--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -14,4 +14,4 @@ jobs:
       - name: Set executable permissions
         run: chmod +x stage1.sh
       - name: Run script file
-        run: ./stage1.sh
+        run: bash ./stage1.sh
