--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -19,7 +19,7 @@ jobs:
           echo "AWS_DEFAULT_REGION=${{ secrets.AWS_DEFAULT_REGION }}" >> $GITHUB_ENV
 
       - name: Run script file
-        run: ./stage2.sh -r AWS_SECRET_ACCESS_KEY -u AWS_ACCESS_KEY_ID -n obenedek
+        run: ./stage1.sh -k obenedek.pem -n obenedek
         
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
