--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Run script file
         run: |
           ./.github/launch-runner.sh -n CSPOT_CI-CD
-          echo "Hostname inside script is $EC2_HOSTNAME"
+          echo "Hostname inside script is $CURR_IP"
         
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
