--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -10,9 +10,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run script file
-        run: |
-          ./.github/launch-runner.sh -n CSPOT_CI-CD
-          echo "Hostname inside script is $CURR_IP"
+        run: ./.github/launch-runner.sh -n CSPOT_CI-CD
+      - name: Terminate instance
+        run: ./.github/terminate.sh -i ${{INSTANCE_ID}}
         
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
