--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -20,4 +20,9 @@ jobs:
         env:
            CURR_ID: ${{ steps.run-script.outputs.CURR_ID }}
         run: echo "curr id is $CURR_ID"
+      - name: Create Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: curr-id
+          path: $GITHUB_ENV
         
