--- a/.github/workflows/terminate.yml
+++ b/.github/workflows/terminate.yml
@@ -17,6 +17,8 @@ jobs:
         with:
           name: curr-id
           path: .
+      - name: Configure contents of artifact
+        run: CURR_ID=$(cat curr_id.txt)
       - name: Run terminate script
         run: ./.github/terminate.sh -i $CURR_ID
         env:
