--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -16,5 +16,15 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-
+      - name: Get curr ID
+        env:
+           CURR_ID: ${{ steps.run-script.outputs.CURR_ID }}
+        run: echo "curr id is $CURR_ID"
+      - name: Create artifact file
+        run: echo "$CURR_ID" > curr_id.txt # Create a dummy file
+      - name: Create Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: curr-id
+          path: curr_id.txt
         
