--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -21,10 +21,10 @@ jobs:
            CURR_ID: ${{ steps.run-script.outputs.CURR_ID }}
         run: echo "curr id is $CURR_ID"
       - name: Create artifact file
-        run: echo "$CURR_ID" > curr_id.txt # Create a dummy file
+        run: echo "$CURR_ID" > ./.github/curr_id.txt # Create a dummy file
       - name: Create Artifact
         uses: actions/upload-artifact@v4
         with:
           name: curr-id
-          path: curr_id.txt
+          path: /.github/curr_id.txt
         
