--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -26,5 +26,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: curr-id
-          path: /.github/curr_id.txt
+          path: ./.github/curr_id.txt
         
