--- a/.github/workflows/terminate.yml
+++ b/.github/workflows/terminate.yml
@@ -14,8 +14,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Download Artifact
         uses: actions/download-artifact@v4
-      - name: Display structure of downloaded files
-        run: ls -R
+        with:
+          name: curr-id
       - name: Configure contents of artifact
         run: CURR_ID=$(cat curr_id.txt)
       - name: Run terminate script
