--- a/.github/workflows/terminate.yml
+++ b/.github/workflows/terminate.yml
@@ -12,10 +12,12 @@ jobs:
     steps: 
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Download Artifact
+      - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
           name: curr-id
+          run-id: ${{ github.event.run_stage1.id }}
+          github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
       - name: Configure contents of artifact
         run: CURR_ID=$(cat curr_id.txt)
       - name: Run terminate script
