--- a/.github/workflows/terminate.yml
+++ b/.github/workflows/terminate.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: curr-id
-          run-id: ${{ github.event.run_stage1.id }}
+          run-id: ${{ github.event.workflow_run.id }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Configure contents of artifact
         run: CURR_ID=$(cat curr_id.txt)
