--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -22,6 +22,8 @@ jobs:
         run: echo "curr id is $CURR_ID"
       - name: Create artifact file
         run: echo "$CURR_ID" > ./.github/curr_id.txt # Create a dummy file
+      - name: Check contents of artifact
+        run: echo "{cat ./.github/curr_id.txt}"
       - name: Create Artifact
         uses: actions/upload-artifact@v4
         with:
