--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -16,12 +16,12 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-      - name: Get curr ID
+      - name: Get curr ID, fill file
         env:
            CURR_ID: ${{ steps.run-script.outputs.CURR_ID }}
-        run: echo "curr id is $CURR_ID"
-      - name: Create artifact file
-        run: echo $CURR_ID > ./.github/curr_id.txt # Create a dummy file
+        run: |
+          echo "curr id is $CURR_ID"
+          echo "$CURR_ID" > ./.github/curr_id.txt # Create a dummy file
       - name: Check contents of artifact
         run: cat ./.github/curr_id.txt
       - name: Create Artifact
