--- a/.github/workflows/terminate.yml
+++ b/.github/workflows/terminate.yml
@@ -18,15 +18,14 @@ jobs:
           name: curr-id
           run-id: ${{ github.event.workflow_run.id }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Configure contents of artifact
-        run: CURR_ID=$(cat curr_id.txt)
       - name: Craft Executable
         run: chmod -x ./.github/terminate.sh
-      - name: Check Contents of ID
-        run: echo "${CURR_ID}"
-      - name: Run terminate script
-        run: ./.github/terminate.sh -i $CURR_ID
+      - name: Configure contents of artifact, run terminate script
+        run: |
+          echo "$CURR_ID"
+          ./.github/terminate.sh -i $CURR_ID
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+           CURR_ID: $(cat curr_id.txt)
+           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
