--- a/.github/workflows/terminate.yml
+++ b/.github/workflows/terminate.yml
@@ -25,7 +25,7 @@ jobs:
           echo "$CURR_ID"
           ./.github/terminate.sh -i $CURR_ID
         env:
-           CURR_ID: $(cat curr_id.txt)
+           CURR_ID: ${cat ./.github/curr_id.txt}
            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
            AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
