--- a/.github/workflows/terminate.yml
+++ b/.github/workflows/terminate.yml
@@ -22,7 +22,7 @@ jobs:
         run: chmod -x ./.github/terminate.sh
       - name: Configure contents of artifact, run terminate script
         run: |
-          CURR_ID=$(cat .github/curr-id.txt)
+          CURR_ID=$(cat ./.github/curr-id.txt)
           echo "CURR_ID=${CURR_ID}" >> $GITHUB_ENV
           echo "$CURR_ID"
           ./.github/terminate.sh -i $CURR_ID
