--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -21,7 +21,7 @@ jobs:
            CURR_ID: ${{ steps.run-script.outputs.CURR_ID }}
         run: |
           echo "curr id is $CURR_ID"
-          echo "$CURR_ID" > ./.github/curr_id.txt # Create a dummy file
+          echo "$CURR_ID" > ./.github/curr_id.txt # Create artifact file
           git config --global user.name 'Oscar Benedek'
           git config --global user.email 'obenedek@users.noreply.github.com'
           git add ./.github/curr_id.txt
