--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -21,10 +21,11 @@ jobs:
            CURR_ID: ${{ steps.run-script.outputs.CURR_ID }}
 
   main-step:
-  needs: run-stage-1
+    needs: run-stage-1
     runs-on: cspot-runner
     steps:
-      - run: echo hi
+      - name: test lol
+        run: echo hi
 
   terminate-runner:
     needs: main-step
