--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -5,9 +5,11 @@ on: push
 jobs:
   run-stage-1:
     runs-on: ubuntu-latest
+    outputs:
+      CURR_ID: ${{ steps.run-script.outputs.CURR_ID }}
     steps: 
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      # - name: Checkout repository
+      #   uses: actions/checkout@v4
 
       - name: Run script file
         id: run-script
@@ -16,29 +18,35 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-      - name: Get curr ID, fill file
-        env:
-           CURR_ID: ${{ steps.run-script.outputs.CURR_ID }}
+
+      - name: check curr ID
+        run: echo CURR_ID = ${{ steps.run-script.outputs.CURR_ID }}
 
   main-step:
     needs: run-stage-1
-    runs-on: cspot-runner
+    runs-on: [self-hosted, Linux, X64]
     steps:
-      - name: test lol
-        run: echo hi
-
-  terminate-runner:
-    needs: main-step
-    runs-on: ubuntu-latest
-    steps: 
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v4
+      - name: test lol
+        run: echo CURR_ID = ${CURR_ID}
+        env:
+           CURR_ID: ${{ needs.run-stage-1.outputs.CURR_ID }}
+
+
+  terminate-runner:    
+    needs: [run-stage-1, main-step]
+    runs-on: ubuntu-latest
+    if: needs.run-stage-1.result == 'success'
+    steps: 
+      # - name: Checkout repository
+      #   uses: actions/checkout@v4
       - name: run terminate script
         run: |
-          echo "$CURR_ID"
+          echo "CURR_ID: ${CURR_ID}"
           ./.github/terminate.sh -i $CURR_ID
         env:
            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
            AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-           CURR_ID: ${{ steps.run-script.outputs.CURR_ID }}
+           CURR_ID: ${{ needs.run-stage-1.outputs.CURR_ID }}
