--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -8,19 +8,17 @@ jobs:
     outputs:
       CURR_ID: ${{ steps.run-script.outputs.CURR_ID }}
     steps: 
-      # - name: Checkout repository
-      #   uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Run script file
         id: run-script
-        run: ./.github/launch-runner.sh -n CSPOT_CI-CD
+        # run: ./.github/launch-runner.sh -n CSPOT_CI-CD
+        run: exit 1
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-
-      - name: check curr ID
-        run: echo CURR_ID = ${{ steps.run-script.outputs.CURR_ID }}
 
   main-step:
     needs: run-stage-1
@@ -34,13 +32,13 @@ jobs:
            CURR_ID: ${{ needs.run-stage-1.outputs.CURR_ID }}
 
 
-  terminate-runner:    
+  terminate-runner:
     needs: [run-stage-1, main-step]
     runs-on: ubuntu-latest
     if: needs.run-stage-1.result == 'success'
     steps: 
-      # - name: Checkout repository
-      #   uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
       - name: run terminate script
         run: |
           echo "CURR_ID: ${CURR_ID}"
