--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Run script file
         id: run-script
         # run: ./.github/launch-runner.sh -n CSPOT_CI-CD
-        run: /bin/true
+        run: /bin/false
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
