--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -13,7 +13,7 @@ jobs:
 
       - name: Run script file
         id: run-script
-        run: ./.github/launch-runner.sh -n CSPOT_CI-CD
+        run: ./.github/launch-runner.py -n CSPOT_CI-CD
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -26,8 +26,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
-      - name: build & install
-        run: ./build-install.sh
+      # - name: build & install
+      #   run: ./build-install.sh
       # - name: test
 
   terminate-runner:
