--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -40,8 +40,10 @@ jobs:
       - name: check IP
         run: |
           echo "PUBLIC_IP: ${PUBLIC_IP}"
+          echo "CURR_ID: ${CURR_ID}"
         env:
           PUBLIC_IP: ${{ needs.launch-instance.outputs.PUBLIC_IP }}
+          CURR_ID: ${{ steps.run-script.outputs.CURR_ID }}
       - name: executing remote ssh commands using ssh key
         uses: appleboy/ssh-action@v1.0.3
         with:
