--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -41,22 +41,24 @@ jobs:
         uses: actions/checkout@v4
       - name: check IP
         run: |
-          echo "PUBLIC_IP: ${PUBLIC_IP}"
+          echo ${PUBLIC_IP
           echo "CURR_ID: ${CURR_ID}"
+          echo $SSH_KEY
         env:
           PUBLIC_IP: ${{ needs.launch-instance.outputs.PUBLIC_IP }}
           CURR_ID: ${{ needs.launch-instance.outputs.CURR_ID }}
+          SSH_KEY: ${{ secrets.CICD_SSH_KEY }}
       - name: executing remote ssh commands using ssh key
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: $PUBLIC_IP
           username: cloud-user
-          key: |
-            ${{ secrets.CICD_SSH_KEY }}
+          key: $SSH_KEY
           port: 22
           script: echo "test"
         env:
           PUBLIC_IP: ${{ needs.launch-instance.outputs.PUBLIC_IP }}
+          SSH_KEY: ${{ secrets.CICD_SSH_KEY }}
 
   terminate-runner:
     needs: [cspot-build-test, launch-instance]
