--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/checkout@v4
       - name: check IP
         run: |
-          echo ${PUBLIC_IP
+          echo $PUBLIC_IP
           echo "CURR_ID: ${CURR_ID}"
           echo $SSH_KEY
         env:
