--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -41,9 +41,9 @@ jobs:
         uses: actions/checkout@v4
       - name: check IP
         run: |
-          echo $PUBLIC_IP
+          echo "PUBLIC_IP: ${PUBLIC_IP}"
           echo "CURR_ID: ${CURR_ID}"
-          echo $SSH_KEY
+          echo "SSH_KEY: ${SSH_KEY}"
         env:
           PUBLIC_IP: ${{ needs.launch-instance.outputs.PUBLIC_IP }}
           CURR_ID: ${{ needs.launch-instance.outputs.CURR_ID }}
