--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -44,7 +44,7 @@ jobs:
           echo "PUBLIC_IP: ${PUBLIC_IP}"
           echo "CURR_ID: ${CURR_ID}"
           echo "SSH_KEY: ${SSH_KEY}"
-          sleep 20s
+          echo "PUBLIC_IP=${PUBLIC_IP}" >> $GITHUB_ENV
         env:
           PUBLIC_IP: ${{ needs.launch-instance.outputs.PUBLIC_IP }}
           CURR_ID: ${{ needs.launch-instance.outputs.CURR_ID }}
@@ -52,13 +52,12 @@ jobs:
       - name: executing remote ssh commands using ssh key
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: $PUBLIC_IP
+          host: ${{ env.PUBLIC_IP }}
           username: cloud-user
           key: $SSH_KEY
           port: 22
           script: echo "test"
         env:
-          PUBLIC_IP: ${{ needs.launch-instance.outputs.PUBLIC_IP }}
           SSH_KEY: ${{ secrets.CICD_SSH_KEY }}
 
   terminate-runner:
