--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -39,16 +39,11 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: check IP
+      - name: Set IP to Env Var
         run: |
-          echo "PUBLIC_IP: ${PUBLIC_IP}"
-          echo "CURR_ID: ${CURR_ID}"
-          echo "SSH_KEY: ${SSH_KEY}"
           echo "PUBLIC_IP=${PUBLIC_IP}" >> $GITHUB_ENV
         env:
           PUBLIC_IP: ${{ needs.launch-instance.outputs.PUBLIC_IP }}
-          CURR_ID: ${{ needs.launch-instance.outputs.CURR_ID }}
-          SSH_KEY: ${{ secrets.CICD_SSH_KEY }}
       - name: executing remote ssh commands using ssh key
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -61,7 +56,7 @@ jobs:
           SSH_KEY: ${{ secrets.CICD_SSH_KEY }}
 
   terminate-runner:
-    needs: [cspot-build-test, launch-instance]
+    needs: [cspot-build-test, launch-instance, ssh-connect]
     runs-on: ubuntu-latest
     steps: 
       - name: Checkout repository
