--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -49,7 +49,7 @@ jobs:
         env:
           ADD_RUNNER: ${{ secrets.ADD_RUNNER }}
 
-  ssh-connect1:
+  ssh-connect:
     needs: [launch-instance, config-runner]
     runs-on: ubuntu-latest
     continue-on-error: true
@@ -61,7 +61,7 @@ jobs:
           echo "PUBLIC_IP=${PUBLIC_IP}" >> $GITHUB_ENV
         env:
           PUBLIC_IP: ${{ needs.launch-instance.outputs.PUBLIC_IP }}
-      - name: executing remote ssh commands using ssh key
+      - name: pre-connect to ssh for key exchange
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ env.PUBLIC_IP }}
@@ -72,19 +72,6 @@ jobs:
         env:
           SSH_KEY: ${{ secrets.CICD_SSH_KEY }}
           TOKEN: ${{ needs.config-runner.outputs.TOKEN }}
-
-  ssh-connect2:
-    needs: [launch-instance, config-runner, ssh-connect1]
-    runs-on: ubuntu-latest
-    continue-on-error: true
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Set IP to Env Var
-        run: |
-          echo "PUBLIC_IP=${PUBLIC_IP}" >> $GITHUB_ENV
-        env:
-          PUBLIC_IP: ${{ needs.launch-instance.outputs.PUBLIC_IP }}
       - name: executing remote ssh commands using ssh key
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -98,7 +85,7 @@ jobs:
           TOKEN: ${{ needs.config-runner.outputs.TOKEN }}
 
   terminate-runner:
-    needs: [cspot-build-test, launch-instance, ssh-connect2]
+    needs: [cspot-build-test, launch-instance, ssh-connect]
     runs-on: ubuntu-latest
     steps: 
       - name: Checkout repository
