--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Run script file
         id: run-script
-        run: .github/launch-runner.py -n codici
+        run: .github/launch-runner.py -n codici2
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
