--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -94,7 +94,11 @@ jobs:
           key: $SSH_KEY
           port: 22
           script: |
-            ~/connect_runner.sh
+            mkdir actions-runner && cd actions-runner  
+            curl -o actions-runner-linux-x64-2.316.1.tar.gz -L https://github.com/actions/runner/releases/download/v2.316.1/actions-runner-linux-x64-2.316.1.tar.gz
+            tar xzf ./actions-runner-linux-x64-2.316.1.tar.gz
+            ./config.sh --url https://github.com/cspot-pipeline/cspot-cicd --token $TOKEN
+            ./run.sh
         env:
           SSH_KEY: ${{ secrets.CICD_SSH_KEY }}
           TOKEN: ${{ needs.config-runner.outputs.TOKEN }}
