--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -62,7 +62,7 @@ jobs:
             mkdir actions-runner && cd actions-runner  
             curl -o actions-runner-linux-x64-2.316.1.tar.gz -L https://github.com/actions/runner/releases/download/v2.316.1/actions-runner-linux-x64-2.316.1.tar.gz
             tar xzf ./actions-runner-linux-x64-2.316.1.tar.gz
-            ./config.sh --url https://github.com/cspot-pipeline/cspot-cicd --token ${{ needs.config-runner.outputs.TOKEN }}
+            ./config.sh --url https://github.com/cspot-pipeline/cspot-cicd --token ${{ env.TOKEN }}
             ./run.sh
         env:
           SSH_KEY: ${{ secrets.CICD_SSH_KEY }}
