--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -53,7 +53,7 @@ jobs:
       - name: executing remote ssh commands using ssh key
         uses: appleboy/ssh-action@v1.0.3
         with:
-          envs: $TOKEN
+          envs: TOKEN
           host: ${{ env.PUBLIC_IP }}
           username: cloud-user
           key: $SSH_KEY
@@ -62,7 +62,7 @@ jobs:
             mkdir actions-runner && cd actions-runner  
             curl -o actions-runner-linux-x64-2.316.1.tar.gz -L https://github.com/actions/runner/releases/download/v2.316.1/actions-runner-linux-x64-2.316.1.tar.gz
             tar xzf ./actions-runner-linux-x64-2.316.1.tar.gz
-            ./config.sh --url https://github.com/cspot-pipeline/cspot-cicd --token ${{ env.TOKEN }}
+            ./config.sh --url https://github.com/cspot-pipeline/cspot-cicd --token $TOKEN
             ./run.sh
         env:
           SSH_KEY: ${{ secrets.CICD_SSH_KEY }}
