--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -46,14 +46,14 @@ jobs:
           echo "PUBLIC_IP=${PUBLIC_IP}" >> $GITHUB_ENV
         env:
           PUBLIC_IP: ${{ needs.launch-instance.outputs.PUBLIC_IP }}
-      - name: Dummy SSH run to fix stuff
-        run: ssh cloud-user@${PUBLIC_IP} || true
-        env:
-          PUBLIC_IP: ${{ needs.launch-instance.outputs.PUBLIC_IP }}
       - name: Check Token
         env:
           TOKEN: ${{ needs.add-runner-to-repo.outputs.TOKEN }}
         run: echo TOKEN=$TOKEN
+      - name: Dummy SSH run to fix stuff
+        run: ssh cloud-user@${PUBLIC_IP} || true
+        env:
+          PUBLIC_IP: ${{ needs.launch-instance.outputs.PUBLIC_IP }}
       - name: executing remote ssh commands using ssh key
         uses: appleboy/ssh-action@v1.0.3
         env:
@@ -65,6 +65,7 @@ jobs:
           key: ${{ secrets.CICD_SSH_KEY }}
           port: 22
           script: |
+            echo TOKEN=$TOKEN
             mkdir actions-runner && cd actions-runner  
             curl -o actions-runner-linux-x64-2.316.1.tar.gz -L https://github.com/actions/runner/releases/download/v2.316.1/actions-runner-linux-x64-2.316.1.tar.gz
             tar xzf ./actions-runner-linux-x64-2.316.1.tar.gz
