--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -50,8 +50,10 @@ jobs:
         run: echo TOKEN=$TOKEN
       - name: Dummy SSH run to fix stuff
         run: |
+          set +e # disable stop-on-error
           while true; do
-            (ssh cloud-user@${PUBLIC_IP} 'logout' && break) || true
+            ssh-keygen -R ${PUBLIC_IP}
+            ssh cloud-user@${PUBLIC_IP} 'logout' && break
           done
         env:
           PUBLIC_IP: ${{ needs.launch-instance.outputs.PUBLIC_IP }}
