--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Run script file
         id: run-script
-        run: .github/launch-runner.py -n codici2
+        run: .github/launch-runner.py --key-name codici2
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -51,11 +51,13 @@ jobs:
       - name: Dummy SSH run to fix stuff
         run: |
           set +e # disable stop-on-error
+          echo ${{ secrets.CICD_SSH_KEY }} > privkey.pem
+          chmod 400 privkey.pem
           mkdir ~/.ssh
           touch ~/.ssh/known_hosts
           while true; do
             ssh-keygen -R ${PUBLIC_IP}
-            ssh cloud-user@${PUBLIC_IP} 'logout' && break
+            ssh -i privkey.pem cloud-user@${PUBLIC_IP} 'logout' && break
           done
         env:
           PUBLIC_IP: ${{ needs.launch-instance.outputs.PUBLIC_IP }}
